src/app/pages/dashboards/default/default.component.scss
/* ... */
.title_details {
    display: flex;
    justify-content: space-between;
}

.team_rank_details {
    font-family: "Swiss921 BT";
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    display: flex;
    font-weight: bold;
    margin-top: -16px;
    color: #FFFFFF;
    justify-content: center;
    width: 33%;

}

.my_score_details {
    font-family: "Swiss921 BT";
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    display: flex;
    font-weight: bold;
    margin-top: -16px;
    color: #F4BD34;
    justify-content: center;
    width: 33%;
    margin-left: 16px;
}

.my_rank_details {
    font-family: "Swiss921 BT";
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    display: flex;
    font-weight: bold;
    margin-top: -16px;
    color: #FFFFFF;
    justify-content: center;
    width: 33%;
    margin-left: 4px;
}

.dot {
    height: 45px;
    width: 45px;
    background-color: #2787C8;
    border-radius: 50%;
    display: inline-block;
    border: 1px solid #ffca22;
    left: 12px;
    margin-top: -6px;

}

.run_scored {
    font-family: "Swis721 Cn BT";
    font-style: normal;
    font-weight: 700;
    font-size: 15px;
    position: absolute;

    color: #FFFFFF;
    width: -44%;
    /* left: 0; */
    /* top: 9px; */
    left: 50%;
    top: 26%;
    transform: translate(-50%, 0px);
}

.run_scored_box {
    width: 40px;
    height: 25px;
    background-color: white;
    position: absolute;
    top: 46px;
    left: 2px;
    background: #2D2C2A;
}

.text_run_scored {
    font-family: 'Swis721 Cn BT';
    font-style: normal;
    width: 91%;
    font-weight: 700;
    font-size: 6.5px;
    line-height: 8px;
    text-align: center;
    text-transform: capitalize;
    margin-top: 4px;
    margin-left: 2px;
    color: #FFFFFF;
}

.grid_circle {
    display: flex;
    justify-content: space-around;
    width: 100%;
}

.profile-section{
    height: 33.5vh;
    width: 19vw !important;
    border-radius: 8px;    
}
.box1{
height: 13vh;

}
.box2{
height: 20vh;
border-radius: 8px;

// border-top: 4px solid #ffffff;

}
::ng-deep .mat-expansion-indicator::after {
    color: white;
  }

  
.baddge-section-card{
    background-repeat: no-repeat;
    background-position: inherit;
    background-size: 100% 100%;
    width:12vw;
    height:23vh;
    border-radius: 11px;

  }
  .bg-image{
    background-repeat: no-repeat;
    background-position: inherit;
    background-size: 100% 100%;
    width: 34vw;
    height: 20vh;
    padding-top: 2vh;
    padding-left: 1vw;
    border-radius: 8px;

  }

//   progress bar


.animation-bar-1 {
  
    display: block;
  
 
    font-size: 16px;
   
    border-radius: 30px;
    background: rgba(0, 0, 0, 0.1);
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
}
.animation-bar{
    display: block;

    font-size: 16px;
    border-radius: 30px;
    .border-left{
        border-left:2px solid #8EC912;
        height:3vh;
    }
}
.badges_row{
    display: flex;
    justify-content: start;
    // gap:23%;
    

}
.Progressscore{
    font-size:1.1vw;font-weight: 600;font-family:'Work sans';
    height:35px;
    width:35px;
    border-radius:50%;
    margin-left:-4%;
    color:#8EC912;
    font-size:3vh;
    // border:1px solid black;
    text-align:center;
    display:grid;
    place-content: center;

    

}
.animation-bar-1 span {
    position: relative;
    display: inline-block;
    vertical-align: middle;
    height: 24px;
    
   
    overflow: hidden;
    // background-size: 150%;
    background: linear-gradient(90deg, #77B711 -4.86%, #D9FF15 11.93%, #77B711 27.8%, #D8FE15 42.73%, #8EC912 58.91%, #D8FE15 71.54%, #8EC912 84.16%, #D8FE15 103.82%);
    border-radius: 20px;
    animation: progress-anim-1 10s infinite linear;
}

.animation-bar-1 span:after {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: "";
    background-image: linear-gradient(45deg, #ffffff 25%,
                                        rgba(0, 0, 0, 0) 25%,
                                        rgba(0, 0, 0, 0) 50%,
                                        #ffffff 50%,
                                        #ffffff 75%,
                                        rgba(0, 0, 0, 0) 75%,
                                        rgba(0, 0, 0, 0));
    background-size: 30px 30px;
    opacity: 0.3;
    animation: progress-anim-1-after 0.5s infinite linear;
}
// @keyframes progress-anim-1 {
//     0% {
//         width: 20%;
//     }
//     50% {
//         width: 80%;
//     }
//     100% {
//         width: 20%;
//     }
// }

// @keyframes progress-anim-1-after {
//     0% {
//         background-position: 0 100%;
//     }
//     100% {
//         background-position: 30px 100%;
//     }
// }


 

